crates/libs/frieze-macros/tests/ui/maybe_of_option.stderr
error: frieze: Maybe<Option<T>> is ambiguous; nullability is doubly defined. Use Maybe<T> alone.
 --> tests/ui/maybe_of_option.rs:6:8
  |
6 |     x: Maybe<Option<String>>,
  |        ^^^^^^^^^^^^^^^^^^^^^
