crates/libs/frieze-macros/tests/ui/maybe_of_option.rs
use frieze::Schema;
use frieze_model::Maybe;

#[derive(Schema)]
struct S {
    x: Maybe<Option<String>>,
}

fn main() {}
